# bluetooth_hid_client

./: README.md  bluez-agent-interface.xml  main.cpp  meson.build  sdp_record.xml  test.cpp  var-deploy-gdb.sh
bluetooth/: bluetooth.h  hci.h  l2cap.h
